# watchdog

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  WATCHDOG_GRPC_API.md  build.rs  notes  tpm_plan.md
cli/: README  go.mod  main.go  makefile
cmd/ais/: README  go.mod  main.go  makefile
cmd/ais/proto/: usage_query.proto  watchdog.proto
proto/: watchdog.proto
python/: cli.py  watchdog.proto  watchdog_pb2.py  watchdog_pb2_grpc.py
src/: definitions.rs  functions.rs  grpc.rs  intentional_trip.rs  kernel_watchdog.rs  ledger.rs  main.rs  pid_persistence.rs  runtime_flags.rs  security_trip.rs
src/ebpf/: dummy.rs  linux.rs  macros.h  mod.rs  network.c  vmlinux.h
src/functions/: inventory.rs  mod.rs  monitoring.rs  verification.rs
src/functions/monitoring/: state_refresh.rs
src/kernel/: Makefile  README.md  awdog.c  init.sh  linux.rs  mod.rs
src/kernel/driver/: ..module-common.o.cmd  .Module.symvers.cmd  .awdog.ko.cmd  .awdog.mod.cmd  .awdog.mod.o.cmd  .awdog.o.cmd  .modules.order.cmd  Makefile  awdog.c  awdog.h  awdog.ko  awdog.mod  modules.order
src/scripts/: build.rs  build_runner.rs  clean.rs  mod.rs  revert.rs
