[package]
name = "watchdog"
version = "0.1.0"
edition = "2024"

[dependencies]
artisan_middleware = {path = "/opt/artisan/lib/artisan_lib"}
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "signal", "sync", "process", "time", "net"] }
chrono = { version = "0.4", features = ["clock"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
tokio-stream = "0.1"
aya = { version = "0.13", default-features = false }
bytemuck = { version = "1.16", features = ["derive"] }
once_cell = "1.19"
get_if_addrs = "0.5"

[build-dependencies]
tonic-build = "0.12"
