[package]
name = "ais_watchdog"
version = "1.0.2"
edition = "2024"

[dependencies]
#artisan_middleware = {path = "/opt/artisan/lib/artisan_lib"}
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "signal", "sync", "process", "time", "net"] }
chrono = { version = "0.4", features = ["clock"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
tokio-stream = "0.1"
bytemuck = { version = "1.16", features = ["derive"] }
once_cell = "1.19"
get_if_addrs = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = { version = "0.29", features = ["process", "signal", "ioctl"] }
artisan_middleware = { git = "https://github.com/Artisan-Hosting/artisan_lib.git", branch = "stable" }
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
byteorder = "1.5"
getrandom = "0.2"
rand = { version = "0.8", features = ["std"] }
rusqlite = { version = "0.31", features = ["bundled"] }
rayon = "1.10"

[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.13", default-features = false }
tss-esapi = "7"

[build-dependencies]
tonic-build = "0.12"
